Add database file to the project
(cherry picked from commit 42f0e2c0b5d788cc799638f77535bb2a0ba2b4e1)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/redbook
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=redbook
+spring.datasource.password=redbook
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 server.port=${PORT:8080}
